add basic html elements to body

--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Rock Paper Scissors Lizard Spock</title>
+    
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
-    
+
+<h1 class="heading">
+<img class="logo" src="Assets/images/logo.png" alt="logo"></h1>
+
+<div class="container">
+    <h1>Rock Paper Scissors Lizard Spock</h1>
+<div class="choices">
+    <div class="choice" data-choice="rock">Rock</div>
+    <div class="choice" data-choice="paper">Paper</div>
+    <div class="choice" data-choice="scissors">Scissors</div>
+    <div class="choice" data-choice="lizard">Lizard</div>
+    <div class="choice" data-choice="spock">Spock</div>
+</div>
+<div class="result">Choose your weapon!</div>
+<button id="play-again">Play Again</button>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="assets/js/script.js"></script> 
 </body>
 </html>
