--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <script src="https://kit.fontawesome.com/59e56de75d.js" crossorigin="anonymous"></script>
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
 
 <h1 class="heading">
 <img class="logo" src="Assets/images/logo.png" alt="logo"></h1>
-
+<img class="hand-gestures" src="Assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures">
 <div class="container">
     <h1>Rock Paper Scissors Lizard Spock</h1>
 <div class="choices">
-    <div class="choice" data-choice="rock">Rock</div>
-    <div class="choice" data-choice="paper">Paper</div>
-    <div class="choice" data-choice="scissors">Scissors</div>
-    <div class="choice" data-choice="lizard">Lizard</div>
-    <div class="choice" data-choice="spock">Spock</div>
+    <div class="choice" data-choice="rock">Rock<i class="fa-regular fa-hand-back-fist"></i></div>
+    <div class="choice" data-choice="paper">Paper<i class="fa-regular fa-hand"></i></div>
+    <div class="choice" data-choice="scissors">Scissors<i class="fa-regular fa-hand-scissors"></i></div>
+    <div class="choice" data-choice="lizard">Lizard <i class="fa-regular fa-hand-lizard"></i></div>
+    <div class="choice" data-choice="spock">Spock<i class="fa-regular fa-hand-spock"></i></div>
 </div>
 <div class="result">Choose your weapon!</div>
 <button id="play-again">Play Again</button>
