Added score function and image function to display results

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 </div>
 </section>
 <footer>
-<div class="result">Choose your weapon!</div>
+<div class="result-wrapper">
+    <div class="result">Choose your weapon!</div>
+    <div id="player-choice"></div>
+    <div id="computer-choice"></div>
+</div>
 <button id="play-again">Play Again</button>
 </div>
 
