--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 </section>
 <footer>
 <div class="result-wrapper">
-    <div class="result">Choose your weapon!</div>
     <div id="player-choice"></div>
     <div id="computer-choice"></div>
 </div>
+
+<div id="result"></div>
+
 <button id="play-again">Play Again</button>
 </div>
 
