Added media queries for responsiveness. Added html and css for Rules to help clarify users and make it look nice.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
+ 
+<div class="hand-gestures">
+<img src="Assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures"> </div>
 
-<h1 class="heading">
-<img class="logo" src="Assets/images/logo.png" alt="logo"></h1>
-<img class="hand-gestures" src="Assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures">
 <div class="container">
     <h1>Rock Paper Scissors Lizard Spock</h1>
 <section class="game-area">
@@ -44,6 +44,41 @@
 <button id="play-again">Play Again</button>
 </div>
 
+<div class="Instructions">
+<h2>Instructions</h2>
+<p>Rock-paper-scissors-lizard-Spock is a five-gesture expansion of the classic selection method
+    game rock-paper-scissors. <br>
+    It operates on the same basic principle, but includes two additional
+    weapons: the lizard and Spock. <br>
+    There are ten possible pairings of the five gestures; each gesture beats two of the other gestures
+    and is beaten by the remaining two.</p>
+</div>
+
+<div class="logo-rules">
+
+       
+<div class="rules">
+    <h2>Rules:</h2>
+    <h2>The rules of Rock-paper-scissors-lizard-Spock are:</h2>
+    <div class="rules-img">   
+        <img src="Assets/images/logo.png" alt="logo">
+        </div>
+   
+ <div class="rules-child">   
+<ul>
+<li>Scissors cuts paper</li>
+<li>paper covers rock</li>
+<li>rock crushes lizard</li>
+<li>lizard poisons Spock</li>
+<li>Spock smashes scissors</li>
+<li>scissors decapitates lizard</li>
+<li>lizard eats paper</li>
+<li>paper disproves Spock</li>
+<li>Spock vaporizes rock</li>
+<li>and as it always has, rock crushes scissors</li>
+</ul>
+</div>
+</div>
     <script src="assets/js/script.js"></script> 
 </footer>
 </body>
