--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
  
-<div class="hand-gestures">
-<img src="Assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures"> </div>
+<!--<div class="hand-gestures">
+<img src="Assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures"> </div>-->
 
 <div class="container">
     <h1>Rock Paper Scissors Lizard Spock</h1>
@@ -23,27 +23,25 @@
      <button aria-label="Lizard" data-type="lizard" class="choice">Lizard <i class="fa-regular fa-hand-lizard"></i></button>
      <button aria-label="Spock" data-type="spock" class="choice">Spock <i class="fa-regular fa-hand-spock"></i></button>
 </div>
-<div id="messsages"></div>
+
 <div class="player">
-    <h3 class="scores">Your score: <span id="player-score">0</span></h3>
+    <h3>Your score: <span id="player-score">0</span></h3>
 
 </div>
 <div class="computer">
-    <h3 class="scores">Computer score: <span id="computer-score">0</span></h3>
-    
+    <h3>Computer score: <span id="computer-score">0</span></h3>
 </div>
 </section>
-<footer>
+
 <div class="result-wrapper">
     <div id="player-choice"></div>
+    <div id="result"></div>
     <div id="computer-choice"></div>
 </div>
 
-<div id="result"></div>
 
-<button id="play-again">Play Again</button>
-</div>
-
+<!--button id="play-again">Play Again</button>
+</div>-->
 <div class="Instructions">
 <h2>Instructions</h2>
 <p>Rock-paper-scissors-lizard-Spock is a five-gesture expansion of the classic selection method
@@ -79,6 +77,7 @@
 </ul>
 </div>
 </div>
+<footer>
     <script src="assets/js/script.js"></script> 
 </footer>
 </body>
