added media quires for mobile to look better

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <section class="game-area">
 <div class="choices">
     <p>Make a choice:</p>
-     <button aria-label="Rock" data-type="rock" class="choice">Rock<i class="fa-regular fa-hand-back-fist"></i></button>
+     <button aria-label="Rock" data-type="rock" class="choice">Rock <i class="fa-regular fa-hand-back-fist"></i></button>
      <button aria-label="Paper" data-type="paper" class="choice">Paper<i class="fa-regular fa-hand"></i></button>
      <button aria-label="Scissors" data-type="scissors" class="choice">Scissors<i class="fa-regular fa-hand-scissors"></i></button>
      <button aria-label="Lizard" data-type="lizard" class="choice">Lizard <i class="fa-regular fa-hand-lizard"></i></button>
@@ -31,6 +31,7 @@
 <div class="computer">
     <h3>Computer score: <span id="computer-score">0</span></h3>
 </div>
+
 </section>
 
 <div class="result-wrapper">
@@ -42,12 +43,12 @@
 
 <!--button id="play-again">Play Again</button>
 </div>-->
-<div class="Instructions">
+<div class="instructions">
 <h2>Instructions</h2>
-<p>Rock-paper-scissors-lizard-Spock is a five-gesture expansion of the classic selection method
+<p>Rock-Paper-Scissors-Lizard-Spock is a five-gesture expansion of the classic selection method
     game rock-paper-scissors. <br>
     It operates on the same basic principle, but includes two additional
-    weapons: the lizard and Spock. <br>
+    weapons: the Lizard and Spock. <br>
     There are ten possible pairings of the five gestures; each gesture beats two of the other gestures
     and is beaten by the remaining two.</p>
 </div>
@@ -57,7 +58,7 @@
        
 <div class="rules">
     <h2>Rules:</h2>
-    <h2>The rules of Rock-paper-scissors-lizard-Spock are:</h2>
+    <h3>The rules of Rock-paper-scissors-lizard-Spock are:</h3>
     <div class="rules-img">   
         <img src="Assets/images/logo.png" alt="logo">
         </div>
