updated the assets folder in js

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2>Rules:</h2>
     <h3>The rules of Rock-paper-scissors-lizard-Spock are:</h3>
     <div class="rules-img">   
-        <img src="Assets/images/logo.png" alt="logo">
+        <img src="assets/images/logo.png" alt="logo">
         </div>
    
  <div class="rules-child">   
