--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
  
 <!--<div class="hand-gestures">
-<img src="Assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures"> </div>-->
+<img src="assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures"> </div>-->
 
 <div class="container">
     <h1>Rock Paper Scissors Lizard Spock</h1>
@@ -60,7 +60,7 @@
     <h2>Rules:</h2>
     <h3>The rules of Rock-paper-scissors-lizard-Spock are:</h3>
     <div class="rules-img">   
-        <img src="Assets/images/logo.png" alt="logo">
+        <img src="assets/images/logo.png" alt="logo">
         </div>
    
  <div class="rules-child">   
