--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/59e56de75d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Audiowide&family=Bebas+Neue&family=Lato:wght@300&family=Oswald:wght@300&display=swap" rel="stylesheet">
+   
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
-<body>
- 
-<!--<div class="hand-gestures">
-<img src="assets/images/RockPaperScissorsLizardSpock.webp" alt="hand-gestures"> </div>-->
 
+<body>
+
+    <video autoplay muted loop id="myVideo">
+        <source src="assets/images/particles-27669.mp4" type="video/mp4">
+      </video>
+      
 <div class="container">
     <h1>Rock Paper Scissors Lizard Spock</h1>
 <section class="game-area">
 <div class="choices">
     <p>Make a choice:</p>
-     <button aria-label="Rock" data-type="rock" class="choice">Rock <i class="fa-regular fa-hand-back-fist"></i></button>
-     <button aria-label="Paper" data-type="paper" class="choice">Paper<i class="fa-regular fa-hand"></i></button>
-     <button aria-label="Scissors" data-type="scissors" class="choice">Scissors<i class="fa-regular fa-hand-scissors"></i></button>
-     <button aria-label="Lizard" data-type="lizard" class="choice">Lizard <i class="fa-regular fa-hand-lizard"></i></button>
-     <button aria-label="Spock" data-type="spock" class="choice">Spock <i class="fa-regular fa-hand-spock"></i></button>
+     <button  data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
+     <button  data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
+     <button  data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
+     <button  data-type="lizard" class="choice"><i class="fa-regular fa-hand-lizard"></i></button>
+     <button  data-type="spock" class="choice"><i class="fa-regular fa-hand-spock"></i></button>
 </div>
 
 <div class="player">
@@ -40,9 +46,6 @@
     <div id="computer-choice"></div>
 </div>
 
-
-<!--button id="play-again">Play Again</button>
-</div>-->
 <div class="instructions">
 <h2>Instructions</h2>
 <p>Rock-Paper-Scissors-Lizard-Spock is a five-gesture expansion of the classic selection method
