edited out errors

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 <section class="game-area">
 <div class="choices">
     <p>Make a choice:</p>
-     <button  data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
-     <button  data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
-     <button  data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
-     <button  data-type="lizard" class="choice"><i class="fa-regular fa-hand-lizard"></i></button>
-     <button  data-type="spock" class="choice"><i class="fa-regular fa-hand-spock"></i></button>
+     <button  alt="rock" data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
+     <button  alt="paper" data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
+     <button  alt="scissors" data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
+     <button  alt="lizard" data-type="lizard" class="choice"><i class="fa-regular fa-hand-lizard"></i></button>
+     <button  alt="spock" data-type="spock" class="choice"><i class="fa-regular fa-hand-spock"></i></button>
 </div>
+
 
 <div class="player">
     <h3>Your score: <span id="player-score">0</span></h3>
@@ -39,7 +40,7 @@
 </div>
 
 </section>
-
+</div>
 <div class="result-wrapper">
     <div id="player-choice"></div>
     <div id="result"></div>
@@ -79,6 +80,7 @@
 <li>Spock vaporizes rock</li>
 <li>and as it always has, rock crushes scissors</li>
 </ul>
+</div>
 </div>
 </div>
 <footer>
