--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="result"></div>
     <div id="computer-choice"></div>
 </div>
-
+<button id="play-again">Play Again</button>
 <div class="instructions">
 <h2>Instructions</h2>
 <p>Rock-Paper-Scissors-Lizard-Spock is a five-gesture expansion of the classic selection method
