edited play again button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <div id="result"></div>
     <div id="computer-choice"></div>
 </div>
-<button id="play-again">Play Again</button>
+<div class="button-container">
+<button id="play-again">PLAY AGAIN </button>
+</div>
 <div class="instructions">
 <h2>Instructions</h2>
 <p>Rock-Paper-Scissors-Lizard-Spock is a five-gesture expansion of the classic selection method
