--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <section class="game-area">
 <div class="choices">
     <p>Make a choice:</p>
-     <button  alt="rock" data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
-     <button  alt="paper" data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
-     <button  alt="scissors" data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
-     <button  alt="lizard" data-type="lizard" class="choice"><i class="fa-regular fa-hand-lizard"></i></button>
-     <button  alt="spock" data-type="spock" class="choice"><i class="fa-regular fa-hand-spock"></i></button>
+     <button  aria-label="rock" data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
+     <button  aria-label="paper" data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
+     <button  aria-label="scissors" data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
+     <button  aria-label="lizard" data-type="lizard" class="choice"><i class="fa-regular fa-hand-lizard"></i></button>
+     <button  aria-label="spock" data-type="spock" class="choice"><i class="fa-regular fa-hand-spock"></i></button>
 </div>
 
 
