--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Rock Paper Scissors Lizard Spock</h1>
 <section class="game-area">
 <div class="choices">
-    <p>Make a choice:</p>
+    <h2><p>Make a choice:</p></h2>
      <button  aria-label="rock" data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
      <button  aria-label="paper" data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
      <button  aria-label="scissors" data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
