changed css styling for a boxed border

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <div class="button-container">
 <button id="play-again">PLAY AGAIN </button>
 </div>
+<div class="instruction-block">
 <div class="instructions">
 <h2>Instructions</h2>
 <p>Rock-Paper-Scissors-Lizard-Spock is a five-gesture expansion of the classic selection method
@@ -82,6 +83,7 @@
 <li>Spock vaporizes rock</li>
 <li>and as it always has, rock crushes scissors</li>
 </ul>
+</div>
 </div>
 </div>
 </div>
