edited final adjustments to html and css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/59e56de75d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Audiowide&family=Bebas+Neue&family=Lato:wght@300&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&amp;family=Audiowide&amp;family=Bebas+Neue&amp;family=Lato:wght@300&amp;family=Oswald:wght@300&amp;display=swap" rel="stylesheet">
    
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
@@ -23,7 +23,7 @@
     <h1>Rock Paper Scissors Lizard Spock</h1>
 <section class="game-area">
 <div class="choices">
-    <h2><p>Make a choice:</p></h2>
+    <h2>Make a choice:</h2>
      <button  aria-label="rock" data-type="rock" class="choice"><i class="fa-regular fa-hand-back-fist"></i></button>
      <button  aria-label="paper" data-type="paper" class="choice"><i class="fa-regular fa-hand"></i></button>
      <button  aria-label="scissors" data-type="scissors" class="choice"><i class="fa-regular fa-hand-scissors"></i></button>
